tests/baselines/reference/for-inStatementsDestructuring7(target=es5).errors.txt
for-inStatementsDestructuring7.ts(3,10): error TS2461: Type 'string' is not an array type.


==== for-inStatementsDestructuring7.ts (1 errors) ====
    declare let obj: { [s: string]: string };
    
    for (let [b, ...c] in obj) {
             ~~~~~~~~~
!!! error TS2461: Type 'string' is not an array type.
        b;
        c;
    }
    